--- a/WindowsXSO/WindowsXSO.csproj
+++ b/WindowsXSO/WindowsXSO.csproj
@@ -6,8 +6,8 @@
         <Nullable>enable</Nullable>
         <LangVersion>latest</LangVersion>
         <Company>Minty Labs</Company>
-        <AssemblyVersion>1.2.0.0</AssemblyVersion>
-        <FileVersion>1.2.0.0</FileVersion>
+        <AssemblyVersion>1.3.0.0</AssemblyVersion>
+        <FileVersion>1.3.0.0</FileVersion>
         <SignAssembly>true</SignAssembly>
         <AssemblyOriginatorKeyFile>XSO_9n2rx2937trx23rc 97tg3rc9 7tr37r3c otf o86rr3 28otf676 8ff6 84rc6f 83r2cf6 86f 8c236f98r b698brf 23c8 o6fi23.snk</AssemblyOriginatorKeyFile>
         <PublicSign>true</PublicSign>
@@ -16,16 +16,17 @@
         <Authors>MintLily</Authors>
         <Description>Windows to XSOverlay Notification Bridge</Description>
         <Copyright>Minty Labs</Copyright>
-        <Version>1.2.0</Version>
+        <Version>1.3.0</Version>
         <ApplicationIcon>..\Resources\XSOWin.ico</ApplicationIcon>
         <PackageProjectUrl>https://github.com/Minty-Labs/WindowsXSO</PackageProjectUrl>
         <PackageLicenseUrl>https://github.com/Minty-Labs/WindowsXSO/blob/main/LICENSE</PackageLicenseUrl>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Serilog" Version="3.0.1" />
-      <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
-      <PackageReference Include="System.Text.Json" Version="7.0.3" />
+      <PackageReference Include="Serilog" Version="3.1.1" />
+        <PackageReference Include="Serilog.Expressions" Version="4.0.0" />
+      <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
+      <PackageReference Include="System.Text.Json" Version="8.0.0" />
       <PackageReference Include="XSNotifications" Version="0.1.2" />
     </ItemGroup>
 
